fix: fix line breaks on Modal

--- a/src/components/organisms/Modal/index.module.scss
+++ b/src/components/organisms/Modal/index.module.scss
@@ -106,6 +106,7 @@
   width: calc(80% - 2%);
   padding: 4px 0;
   border-bottom: 1px solid #c4c4c4;
+  overflow-wrap: break-word;
   @include mq(sm) {
     width: 100%;
     border: none;
